--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^11.2.13",
     "next": "14.1.0",
     "react": "^18",
+    "react-animated-counter": "^1.7.9",
     "react-dom": "^18",
+    "react-gradient-progress": "^1.0.3",
     "react-icons": "^5.0.1",
     "react-spring": "^9.7.3",
     "react-spring-carousel": "^2.0.19",
